--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <h1>Ticky Tackity Toe</h1>
+  <h2 id ="whosTurn">"X Gonna Give It To Yuh!"</h2>
 
   <section>
   	<div id="A" class="playSquare"></div>
