finished with reset button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Ticky Tackity Toe</h1>
   <h2 id ="whosTurn">"X Gonna Give It To Yuh!"</h2>
-
+  <input type="button" name="reset" class="btn" value="YOU BEST BE STARTIN OVER SON!">
   <section>
   	<div id="A" class="playSquare"></div>
   	<div id="B" class="playSquare"></div>
